--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
